Highlight items: fix image height on tablet breakpoint

--- a/server/modules/highlight-items-widget/ui/src/index.scss
+++ b/server/modules/highlight-items-widget/ui/src/index.scss
@@ -16,9 +16,6 @@ body { overflow: hidden; }
   scroll-behavior: smooth;
   margin-bottom: 18px;
 
-  @media (min-width: map-get($breakpoints, 'sm')) {
-    max-height: 500px;
-  }
   @media (min-width: map-get($breakpoints, 'md')) {
     max-height: none;
     height: 767px;
@@ -93,6 +90,9 @@ body { overflow: hidden; }
     @media (min-width: map-get($breakpoints, 'sm')) {
       height: 100%;
     }
+    @media (min-width: map-get($breakpoints, 'sm')) and (max-width: map-get($breakpoints, 'md') - 1) {
+      position: absolute;
+    }
   }
 
   .pdl-highlight-widget__container {
@@ -106,6 +106,11 @@ body { overflow: hidden; }
       width: calc(50% - 35px);
       height: calc(100% - 35px);
       margin: 20px 20px 15px;
+    }
+
+    @media (min-width: map-get($breakpoints, 'sm')) and (max-width: map-get($breakpoints, 'md')) {
+      margin-left: calc(50% + 20px);
+      min-height: 520px;
     }
 
     @media (min-width: map-get($breakpoints, 'md')) {
@@ -228,6 +233,11 @@ body { overflow: hidden; }
     margin-top: 20px;
     display: flex;
     gap: 8px;
+
+    @media (min-width: map-get($breakpoints, 'sm')) {
+      position: absolute;
+      bottom: 20px;
+    }
 
     @media (min-width: map-get($breakpoints, 'md')) {
       position: absolute;
